--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -7,9 +7,29 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+    </script>
+    <![endif]-->
   </head>
 
   <body>
-    <%= yield %>
+    <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <% # link_to は第１引数はリンクテキスト、第２引数はURLとなる  %>
+        <%= link_to "sample app", '#', id:"logo" %>
+        <nav>
+          <ul class="nav navbar-nav navbar-right mr-auto">
+            <li class="nav-item"><%= link_to "Home", '#', class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to "Help", '#', class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to "Log in", '#', class: "nav-link" %></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
