--- a/sample_app/app/views/layouts/_header.html.erb
+++ b/sample_app/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <% # link_to は第１引数はリンクテキスト、第２引数はURLとなる  %>
-    <%= link_to "sample app", '#', id:"logo" %>
+    <%= link_to "sample app", root_path, id:"logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right mr-auto">
-        <li class="nav-item"><%= link_to "Home", '#', class: "nav-link" %></li>
-        <li class="nav-item"><%= link_to "Help", '#', class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Help", help_path, class: "nav-link" %></li>
         <li class="nav-item"><%= link_to "Log in", '#', class: "nav-link" %></li>
       </ul>
     </nav>
