--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <div class="container">
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <% # 本番環境では出力しない（開発時のみ出力）  %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
